# open-payments-python-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
scripts/: fetch_spec.sh
src/open_payments_sdk/: configuration.py  http.py
src/open_payments_sdk/api/: auth.py  resource.py  wallet.py
src/open_payments_sdk/client/: client.py
src/open_payments_sdk/gnap-utils/: http-signatures.py
src/open_payments_sdk/gnap_utils/: hash.py  http_signatures.py  keys.py  security.py
src/open_payments_sdk/models/: auth.py  http_signatures.py  keys.py  resource.py  wallet.py
src/open_payments_sdk/utils/: utils.py
test/integration/: test_grants.py  test_wallet.py
test/unit/: test_hash_verification.py  test_http_signatures.py  test_key.py  test_op_client.py
tests/: conftest.py
tests/integration/: privkey.pem.example  test_grants.py  test_wallet.py
tests/unit/: test_op_client.py
