[project]
name = "openpayments-python-sdk"
version = "0.1.0"
description = "Python SDK implementation for openpayments API"
authors = [
    {name = "Yiannis Giannelos",email = "johngiannelos@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
